# Brain-Diagnosis

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  dockerfile  pyproject.toml
backend/src/api/: app.py  main.py
backend/src/api/routers/: inference.py
backend/src/api/service/: diagnosis.py
backend/src/config/: utils.py
frontend/: .dockerignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  theme.js
frontend/src/app/diagnosis/: page.tsx
frontend/src/app/test/: page.tsx
frontend/src/components/: navbar.tsx  report.tsx
frontend/src/components/form/: diagnosis.tsx  form_builder.tsx
frontend/src/components/form/field/: file_progress_bar.tsx  upload.tsx
frontend/src/utils/: backend.js
