[tool.poetry]
name = "brain diagnosis"
version = "0.1.0"
description = ""
authors = ["Artachtron <florent.vaucher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<=3.10"
tensorflow-io-gcs-filesystem = "< 0.32.0"
tensorflow="2.13.0"
fastapi = "^0.65.2"
pillow = "^10.3.0"
numpy = "^1.24.3"
keras = "2.13.1"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
